--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,9 @@ body {
 .carousel-top .row {
     display: block !important;
 }
+.carousel-top .caption button {
+    border-radius: 10px;
+}
 .carousel-top .carousel .carousel-item img {
     height: 400px;
 }
@@ -63,7 +66,14 @@ body {
     display: flex;
     justify-content: space-around;
 }
-
+.features-trips h3 {
+    text-align: center;
+    margin-bottom: 30px;
+    background-color: #ddd;
+    /* display: inline-block; */
+    padding: 20px;
+    border-radius: 50%;
+}
 .features-trips .card img {
     height: 200px;
 }
@@ -75,6 +85,7 @@ body {
     text-align: center;
     background-color: #eee;
     padding: 20px 0 ;
+    border-radius: 20px;
 }
 .why-us h3 {
     background-color: rgb(247, 252, 0);
@@ -93,6 +104,7 @@ body {
     margin-top: 50px;
     padding: 20px;
     text-align: center;
+    border-radius: 10px;
 }
 .footer .top-footer ul li {
     list-style: none;
@@ -142,6 +154,10 @@ body {
     color: #6001D2;
     transition: all 0.3s ease-in-out;
 
+}
+.footer .contact h6 {
+    font-size: large ;
+    color: #858EFA;
 }
 
 @media(max-width:1049px){
